tests/reference/asr-string_slice-e254cc2.stderr
semantic error: Substring `start` is negative
 --> tests/errors/string_slice.f90:4:13
  |
4 |     print*, s(-2:6)
  |             ^^^^^^^ 
